<resources>
    <string name="app_name">Practica2</string>
    <string name="nuevo_contacto">Nuevo contacto</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Telefono</string>
    <string name="notas">Notas</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="alejandro_mas_pr_ctica2">Alejandro Mas - Práctica2</string>
    <string name="agenda">Agenda</string>
    <string name="receta">Receta</string>
    <string name="descripcion">Descripción</string>
    <string name="alejandro_mas">Alejandro Mas</string>
    <string name="tortitas_con_ar_ndanos_y_fresas">Tortitas con arándanos y fresas</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="textoDescripcion">Esta receta de tortitas proteicas de arándanos con 4 ingredientes es muy fácil de preparar (incluso para un novato de los fogones). Las tortitas de arándanos son una receta de desayuno de las más básicas en el mundo del fitness, pero veamos, ¿a quién no le ha pasado alguna vez que las tortitas han quedado demasiado líquidas, deformes y arrugadas que se parten en cuanto les acercas la paleta de cocina?</string>
    <string name="textoIngredientes">100 gramos de arándanos, 2 huevos grandes (o 4 claras de huevo si quieres reducir la cantidad de grasa y de calorías) 1 cazo de Impact Whey Protein (sabor vainilla o plátano) y 1 cazo de harina de avena</string>
    <string name="recetaCompleta">Primero, pon a calentar una sartén antiadherente a fuego medio. Que la sartén esté a temperatura media es la clave, si empieza a humear, estará demasiado caliente. A continuación, añade el plátano y los huevos a un recipiente apto para la batidora y bate hasta que quede líquido. Añade al recipiente la proteína de suero y la harina de avena y sigue batiendo hasta que quede una masa suave. Asegúrate de seguir los pasos en este orden, para evitar que el polvo se quede pegado en el fondo del recipiente y no se mezcle bien. Vierte una cuarta parte de la mezcla final en la sartén caliente. Si lo prefieres, puedes hacer que tus tortitas queden más gordas; solo espera unos 20 segundos desde que viertes la mezcla en la sartén y vuelve a verter otro chorrito más de mezcla sobre la tortita. Espera unos 30 segundos aproximadamente (o hasta que veas que se empieza a dorar la parte inferior), dale la vuelta a la tortita con la ayuda de una paleta de cocina y cocina durante otros 30 segundos más. Repite este mismo proceso hasta que te quedes sin mezcla. Por último, puedes añadir a las tortitas tus toppings favoritos (por ejemplo, unos arándanos con nuestro sirope de arce sin azúcar, convertirán esta receta en la mejor receta de tortitas proteicas del mundo).</string>
    <string name="recetaTitulo">Receta</string>
    <string name="volver">Volver</string>
</resources>